# cti_msgs

./: .gitignore  .gitlab-ci.yml  .make_deb.sh  .upload.sh  CMakeLists.txt  package.xml
msg/: Alarm.msg  AlarmArray.msg  AllSensorStatus.msg  AutoPath.msg  AutoPoseStamped.msg  AutoTransmission.msg  BackStageSignalState.msg  BaseMap.msg  BatteryCell.msg  BatteryCellsState.msg  BatteryState.msg  BoardVersion.msg  BoardVersionData.msg  BoundingBox.msg  BoxSensorTabState.msg  BoxState.msg  BrushCmd.msg  BuildingRobotState.msg  ChangeFlag.msg  CloudCluster.msg  ConfigPointsConcatFilter.msg  ConfigRayGroundFilter.msg  ConfigRingGroundFilter.msg  CpuStatus.msg  Data.msg  DataArray.msg  DetectedObject.msg  DistinguishState.msg  DustbinControl.msg  DustbinControlNew.msg  DustbinState.msg  DustbinStateNew.msg  DustboxControl.msg  DustboxState.msg  DynamicObject.msg  ElevatorCmd.msg  ErrorCode.msg  ErrorStatus.msg  ErrorStatusArray.msg  FrenetPoint.msg  (+90 more)
srv/: AutoPathService.srv  BoxOperationService.srv  Gps2NdtServiceArray.srv  NavPathService.srv  Ndt2GpsService.srv  Ndt2GpsServiceArray.srv  PathService.srv  PolygonDetectionService.srv  PoseForAttributeType.srv  SmoothPathService.srv  TargetService.srv  TrafficLightService.srv
